<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MythTV Player An application for Android users to play MythTV Recordings and Videos
  ~ Copyright (c) 2015. Daniel Frey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/navigation_drawer_home"
            android:title="@string/drawer_item_home" />

        <item
            android:id="@+id/navigation_item_watch_recordings"
            android:icon="@drawable/navigation_drawer_watch_recordings"
            android:title="@string/drawer_item_watch_recordings" />

        <item
            android:id="@+id/navigation_item_watch_videos"
            android:icon="@drawable/navigation_drawer_watch_videos"
            android:title="@string/drawer_item_watch_videos" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_watch_settings"
            android:icon="@drawable/navigation_drawer_settings"
            android:title="@string/drawer_item_preferences" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_item_about"
            android:checkable="false" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_troubleshoot"
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:title="@string/drawer_item_troubleshoot" />

    </group>

</menu>