<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MythTV Player An application for Android users to play MythTV Recordings and Videos
  ~ Copyright (c) 2015. Daniel Frey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="browse_title"><![CDATA[Videos]]></string>
    <string name="recordings_browse_title"><![CDATA[MythTV Recordings]]></string>
    <string name="videos_browse_title"><![CDATA[MythTV Videos]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_recording">Watch episode</string>
    <string name="queue_hls">Queue HLS</string>
    <string name="queued">HLS Queued</string>
    <string name="queued_notice">HLS Transcode in progress, please wait.</string>
    <string name="watch_video">Watch video</string>
    <string name="search_results">Search Results</string>

</resources>